tests/interp/bad/no-ijr.ngc
;R i j k words all missing for arc
g2f1x1
